Conexion con Mapbox establecida correctamente

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/samir93bj/Aplicacion-de-clima#readme",
   "dependencies": {
-    "color": "^4.2.0",
+    "axios": "^0.25.0",
+    "colors": "^1.4.0",
     "inquirer": "^8.2.0"
   }
 }
